[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/text_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/stripe_rect.gd" type="Script" id=3]

[node name="RectStripe" type="Node2D"]
position = Vector2( 0, 114.796 )
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="RectLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 80.0
default_color = Color( 0.0392157, 0.152941, 0.254902, 0.721569 )

[node name="TextRect" type="ReferenceRect" parent="."]
margin_top = -36.3144
margin_right = 616.0
margin_bottom = 30.6856
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectCalculator" type="Label" parent="TextRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_right = -562.0
rect_min_size = Vector2( 0, 67 )
theme = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="TextRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_right = -362.0
rect_min_size = Vector2( 0, 67 )
theme = ExtResource( 1 )
valign = 1

[node name="Tween" type="Tween" parent="TextRect/Text"]
